head:

0.1.1:

- Add multiupload unit test and update docs

- Coordinate the error exception

- Fix bug

- Add put object from string method

- Change return value format of SNDA_Object.get_object_info() method
  
  -- Now the return value provide metadata, size and last_modified properties

0.1.0:

- Initial public release